apps/gitea/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: shikanime
spec:
  ports:
    - name: http
      port: 8112
      targetPort: http
  selector:
    app.kubernetes.io/name: gitea
