apps/gitea/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: gitea
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - gitea
